test/1.4/errors/T_WREDUNDANTLEVEL.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

/// COMPILE-ONLY

device test;

method init() {
    /// WARNING WREDUNDANTLEVEL
    log info, 1 then 1: "init";
}
